# llm-text-to-sql-finance

./: .env.example  .gitignore  CNAME  README.md  index.html  pyproject.toml  requirements.txt
config/: kpi_definitions.yaml  roles.yaml  safety_rules.yaml  settings.py
data/sample_schemas/: finance_views.sql  kpi_mappings.csv
scripts/: run_eval.py  seed_glossary.py
src/app/: main.py  middleware.py
src/auth/: rbac.py  session.py
src/evaluation/: eval_runner.py
src/knowledge/: kpi_glossary.py  schema_registry.py
src/sql_engine/: executor.py  generator.py  schema_resolver.py  validator.py
tests/: conftest.py  test_glossary.py  test_rbac.py  test_validator.py
